Phase 5: harden loop, switch and advanced graph validation